--- a/package.json
+++ b/package.json
@@ -11,15 +11,15 @@
   },
   "dependencies": {
     "@radix-ui/react-navigation-menu": "^1.2.3",
+    "@react-spring/web": "^9.7.5",
     "@tsparticles/react": "^3.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.469.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-particles": "^2.12.2",
+    "react-icons": "^5.4.0",
     "react-router-dom": "^7.1.1",
-    "react-tsparticles": "^2.12.2",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "vanta": "^0.5.24"
